--- a/src/manifest.json
+++ b/src/manifest.json
@@ -22,6 +22,7 @@
     "48": "logo.png",
     "128": "logo.png"
   },
+  "options_page": "options/index.html",
   "host_permissions": [
     "https://business.oceanengine.com/*",
     "https://*.oceanengine.com/*",
@@ -35,19 +36,8 @@
     "default_popup": "popup/index.html"
   },
   "content_scripts": [
-    {
-      "matches": ["https://business.oceanengine.com/*"],
-      "js": [
-        "content-scripts/event/index.js"
-      ],
-      "run_at": "document_start"
-    },
-    {
-      "matches": ["https://business.oceanengine.com/*"],
-      "js": [
-        "content-scripts/oceanengine/index.js"
-      ]
-    }
+    
+    
   ],
   "web_accessible_resources": [
       {
